--- a/.gitignore
+++ b/.gitignore
@@ -1,87 +1,71 @@
-# Java
-*.class
-*.log
-*.ctxt
-.mtj.tmp/
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-hs_err_pid*
-replay_pid*
-
-# Gradle
-.gradle/
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-# Maven
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-# IDE - IntelliJ IDEA
-.idea/
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/# IDE - VS Code
+# Root level
+.cursor/
 .vscode/
-*.code-workspace
-.history/
-
-# IDE - Eclipse
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-# Spring Boot
-application-*.yml
-application-*.properties
-!application.yml
-!application.properties
-
-# Operating System
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-
-# macOS
+.idea/
 .DS_Store
-.AppleDouble
-.LSOverride
-Icon
-._*
 
-# Linux
-*~
-.directory
-.Trash-*# Logs
+# Backend - Spring Boot
+backend/HELP.md
+backend/.gradle
+backend/build/
+backend/!gradle/wrapper/gradle-wrapper.jar
+backend/!**/src/main/**/build/
+backend/!**/src/test/**/build/
+
+# Backend - STS/Eclipse
+backend/.apt_generated
+backend/.classpath
+backend/.factorypath
+backend/.project
+backend/.settings
+backend/.springBeans
+backend/.sts4-cache
+backend/bin/
+backend/!**/src/main/**/bin/
+backend/!**/src/test/**/bin/
+
+# Backend - IntelliJ IDEA
+backend/.idea
+backend/*.iws
+backend/*.iml
+backend/*.ipr
+backend/out/
+backend/!**/src/main/**/out/
+backend/!**/src/test/**/out/
+
+# Backend - VS Code
+backend/.vscode/
+
+# Backend - Application properties
+backend/src/main/resources/application-*.yml
+backend/src/main/resources/application-*.properties
+backend/!src/main/resources/application.yml
+backend/!src/main/resources/application.properties
+
+# Client - Gradle
+client/.gradle/
+client/build/
+client/!gradle/wrapper/gradle-wrapper.jar
+client/!**/src/main/**/build/
+client/!**/src/test/**/build/
+
+# Client - IntelliJ IDEA
+client/.idea/
+client/*.iws
+client/*.iml
+client/*.ipr
+client/out/
+client/!**/src/main/**/out/
+client/!**/src/test/**/out/
+
+# Client - VS Code
+client/.vscode/
+
+# Logs
 logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Dependencies
-node_modules/
-jspm_packages/
+backend/logs/
+client/logs/
 
 # Environment variables
 .env
@@ -89,25 +73,21 @@ jspm_packages/
 .env.development.local
 .env.test.local
 .env.production.local
+backend/.env
+client/.env
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
+# Compiled class files
+*.class
 
-# Compiled files
-dist/
-build/
-out/
+# Package files
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
-# Cache
-.cache/
-.temp/
-.tmp/
-
-# Test coverage
-coverage/
-
-# Custom - Project specific
-/backend/src/main/resources/application-dev.yml
-/backend/src/main/resources/application-prod.yml
+# JVM crash logs
+hs_err_pid*
+replay_pid*
