--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=gameadvisor
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+
+# MySQL DataSource 설정
+spring.datasource.url=jdbc:mysql://localhost:3306/gameadvisor_db?serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=password
+# spring.h2.console.enabled=true
+
+# JPA/Hibernate 설정
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# 앱 시작시 테이블 생성, 이미 있으면 변경하지 않음
+spring.jpa.hibernate.ddl-auto=create
+# SQL 쿼리 로그를 콘솔에 출력
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
