--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # 앱 시작시 테이블 생성, 이미 있으면 변경하지 않음
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # SQL 쿼리 로그를 콘솔에 출력
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
