--- a/client/build.gradle
+++ b/client/build.gradle
@@ -43,3 +43,7 @@ javafx {
     version = '17'
     modules = ['javafx.controls', 'javafx.fxml']
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
