refactor: 클라이언트 패키지 구조 세분화 및 import 오류 수정 - model, service, network, ui 등으로 파일 이동 및 패키지 정리 - Game import 누락 및 타입 오류 해결 - 전체 빌드 정상화

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     // Testing
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
+
+    // JNA
+    implementation 'net.java.dev.jna:jna:5.13.0'
+    implementation 'net.java.dev.jna:jna-platform:5.13.0'
 }
 
 application {
