--- a/client/build.gradle
+++ b/client/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 }
 
 application {
-    mainClass = 'com.gameadvisor.client.GameAdvisorClient'
+    mainClass = 'com.gameadvisor.client.ui.GameAdvisorClient'
 }
 
 test {
