--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+# Gemini API 설정 (실제 키는 application-local.properties에 설정하세요)
+gemini.api.key=PLACEHOLDER_API_KEY
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
+gemini.api.timeout=30000
