feat: AI 화면 분석 기능 및 말풍선 UI/UX 개선
- Gemini Vision API를 활용한 실시간 게임 화면 분석 시스템 구축
- 화면 캡쳐 유틸리티(ScreenCaptureUtil) 구현으로 게임 창 영역만 정확히 캡쳐
- 캐릭터 오른쪽 위에 🔍 버튼 추가로 원클릭 화면 분석 기능 구현
- 말풍선 배경을 90% 불투명도 반투명으로 변경하여 가독성 대폭 개선
- 텍스트 길이에 따른 적응형 표시 시간(2-12초) 시스템 구현
- 말풍선 표시 중 캐릭터 자동 활동 일시 정지 기능 추가
- 백엔드 API 확장: /api/advice/screen 엔드포인트 및 관련 모델 구현
- Jackson 직렬화 최적화로 클라이언트-서버 간 안정적인 데이터 교환

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,7 +23,14 @@ spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
+# 기본 프로파일을 local로 설정
+spring.profiles.active=local
+
 # Gemini API 설정 (실제 키는 application-local.properties에 설정하세요)
 gemini.api.key=PLACEHOLDER_API_KEY
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
 gemini.api.timeout=30000
+
+# Jackson 설정 - LocalDateTime 직렬화 지원
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.deserialization.fail-on-unknown-properties=false
