--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gameadvisor_db?serverTimezone=
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# H2 DataSource 설정 (개발/테스트용 - 주석처리)
 # spring.datasource.url=jdbc:h2:mem:testdb
 # spring.datasource.driverClassName=org.h2.Driver
 # spring.datasource.username=sa
