--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,10 +2,15 @@ spring.application.name=gameadvisor
 # spring.h2.console.enabled=true
 # spring.h2.console.path=/h2-console
 
-# MySQL DataSource 설정
-spring.datasource.url=jdbc:mysql://localhost:3306/gameadvisor_db?serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=password
+# # MySQL DataSource 설정
+# spring.datasource.url=jdbc:mysql://localhost:3306/gameadvisor_db?serverTimezone=UTC&allowPublicKeyRetrieval=true
+# spring.datasource.username=root
+# spring.datasource.password=password
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# MySQL DataSource 설정 (Docker 환경용)
+spring.datasource.url=jdbc:mysql://mysql:3306/gameadvisor_db?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=gameadvisor
+spring.datasource.password=gameadvisor123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # H2 DataSource 설정 (개발/테스트용 - 주석처리)
@@ -29,7 +34,7 @@ spring.sql.init.mode=always
 spring.profiles.active=local
 
 # Gemini API 설정 (실제 키는 application-local.properties에 설정하세요)
-gemini.api.key=PLACEHOLDER_API_KEY
+# gemini.api.key=PLACEHOLDER_API_KEY
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
 gemini.api.timeout=30000
 
