feat: 공략 데이터 자동 수집 기능 추가
- IGN, Fandom 등 주요 URL 크롤링 및 벡터화 파이프라인 구현
- WebLearningController에 수집 트리거 API 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,6 @@ services:
     container_name: gameadvisor-backend
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      GEMINI_API_KEY: ${GEMINI_API_KEY:-PLACEHOLDER_API_KEY}
     ports:
       - "8080:8080"
     depends_on:
@@ -38,7 +37,7 @@ services:
       - gameadvisor-network
     restart: unless-stopped
     env_file:
-      - docker-compose.env
+      - ./docker-compose.env
 
 volumes:
   mysql_data:
