--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.application.name=gameadvisor
 # spring.datasource.password=password
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # MySQL DataSource 설정 (Docker 환경용)
-spring.datasource.url=jdbc:mysql://mysql:3306/gameadvisor_db?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=gameadvisor
-spring.datasource.password=gameadvisor123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://mysql:3306/gameadvisor_db?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+# spring.datasource.username=gameadvisor
+# spring.datasource.password=gameadvisor123
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # H2 DataSource 설정 (개발/테스트용 - 주석처리)
 # spring.datasource.url=jdbc:h2:mem:testdb
